--- a/package.json
+++ b/package.json
@@ -12,12 +12,15 @@
     "seed": "ts-node ./prisma/seed.ts"
   },
   "dependencies": {
+    "-": "^0.0.1",
     "@prisma/client": "^5.13.0",
     "@radix-ui/react-slot": "^1.0.2",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
+    "D": "^1.0.0",
     "lucide-react": "^0.378.0",
     "next": "14.2.3",
+    "prettier-plugin-tailwindcss": "^0.5.14",
     "react": "^18",
     "react-dom": "^18",
     "tailwind-merge": "^2.3.0",
